--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
     <script type="text/javascript">
         // registering onload event on event queue
-        if(!window._szTrackerEventQueue){
-            window._szTrackerEventQueue = []
+        if(!window._szTrackerEventQueue) {
+            window._szTrackerEventQueue = [];
         }
         // adding load event to queue
         window._szTrackerEventQueue.push({eventName: 'm_new_load'});
