--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
       <html>
         <head>
           <script type="text/javascript">
+                 // events to be tracked
                 function submit() {
                     alert('clicked');
                     szTrack({eventName: 'button_clicked', foo:'bar'});
