--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </script>
 
     <script type="text/javascript">
-        // registering onload event on event queue
+        // register onload event on event queue
         if(!window._szTrackerEventQueue) {
             window._szTrackerEventQueue = [];
         }
