--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
                  // events to be tracked
                 function submit() {
                     alert('clicked');
+                    // trigger tracking function with data
                     szTrack({eventName: 'button_clicked', foo:'bar'});
                 }
                 function submit2() {
                     alert('clicked');
+                    // trigger tracking function with data
                     szTrack({eventName: 'button_2_clicked'});
                 }
           </script>
