--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           </script>
         </head>
         <body>
+            <!-- Buttons for generating events-->
           <input type="button" onclick="submit()" value="click"/>
           <input type="button" onclick="submit2()" value="click"/>
         </body>
