--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
           <input type="button" onclick="submit2()" value="click"/>
         </body>
       <script type="text/javascript">
+
+        // url from where script is loaded
+        var SCRIPT_URL = "http://localhost:3030/tracker/?v=1";
+
         // fetching user details
         var TRACKER_CLIENT_DATA = (function() {
             var userAgent = navigator.userAgent;
@@ -48,7 +52,7 @@
         // loading script on upload dom loading
         document.addEventListener('DOMContentLoaded', function () {
           if(typeof helper !== 'undefined' && helper && helper.loadScriptAsync){
-            helper.loadScriptAsync('http://localhost:3030/tracker/?v=1');
+            helper.loadScriptAsync(SCRIPT_URL);
           }
         });
       </script>
