--- a/example/index.html
+++ b/example/index.html
@@ -22,7 +22,8 @@
       <script type="text/javascript">
 
         // url from where script is loaded
-        var SCRIPT_URL = "http://localhost:3030/tracker/?v=1";
+        var URL = "http://localhost:3030";
+        var SCRIPT_URL = URL + "/tracker/?v=1";
 
         // fetching user details
         var TRACKER_CLIENT_DATA = (function() {
